Salesforce/force-app/main/default/objects/PPI_Work_Class_Work_Category__mdt/PPI_Work_Class_Work_Category__mdt.object-meta.xml
<CustomObject>
    <description>Point of truth for the Guided View of the Categories of Work</description>
    <label>PPI Work Class Work Category</label>
    <pluralLabel>PPI Work Class Work Categories</pluralLabel>
</CustomObject>