Salesforce/force-app/main/default/objects/PPI_Work_Class_Work_Category__mdt/fields/Class_Combination__c.field-meta.xml
<CustomField>
    <fullName>Class_Combination__c</fullName>
    <label>Class Combination</label>
    <referenceTo>PPI_Work_Class_One_and_Two__mdt</referenceTo>
    <relationshipName>PPI_Work_Class_Work_Activities</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>