Salesforce/force-app/main/default/objects/PPI_Work_Class_Work_Category__mdt/fields/Register_Type__c.field-meta.xml
<CustomField>
    <fullName>Register_Type__c</fullName>
    <label>Register Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>