Salesforce/force-app/main/default/objects/PPI_Work_Class_Work_Category__mdt/fields/Valid_to__c.field-meta.xml
<CustomField>
    <fullName>Valid_to__c</fullName>
    <label>Valid to</label>
    <type>Date</type>
</CustomField>