Salesforce/force-app/main/default/objects/PPI_Work_Class_Work_Category__mdt/fields/Work_Category__c.field-meta.xml
<CustomField>
    <fullName>Work_Category__c</fullName>
    <label>Work Category</label>
    <referenceTo>PPI_Work_Category__mdt</referenceTo>
    <relationshipLabel>PPI Work Class Work Categories</relationshipLabel>
    <relationshipName>PPI_Work_Class_Work_Categories</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>